@@ -30,7 +30,7 @@ include_once "include/page_header.php";
 	
 ?>
 <?php
-	$_REQUEST['config'] = get_request('config',get_profile('web.screens.config',0));
+	$_REQUEST['config'] = get_request('config',get_profile('web.screenconf.config',0));
 
 //		VAR			TYPE	OPTIONAL FLAGS	VALIDATION	EXCEPTION
 	$fields=array(
@@ -70,7 +70,7 @@ include_once "include/page_header.php";
 
 	$config = $_REQUEST['config'] = get_request('config', 0);
 
-	update_profile('web.screens.config', $_REQUEST['config']);
+	update_profile('web.screenconf.config', $_REQUEST['config']);
 ?>
 <?php
 	if( 0 == $config )
